// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`lexer common tokens should allow underlined heading 1`] = `
[
  {
    "indent": 0,
    "level": 1,
    "raw": "Heading 1
======",
    "setext": true,
    "tokens": [
      {
        "raw": "Heading 1",
        "type": "text",
        "value": "Heading 1",
      },
    ],
    "type": "heading",
    "value": "Heading 1",
  },
  {
    "indent": 0,
    "level": 2,
    "raw": "Heading 2
------",
    "setext": true,
    "tokens": [
      {
        "raw": "Heading 2",
        "type": "text",
        "value": "Heading 2",
      },
    ],
    "type": "heading",
    "value": "Heading 2",
  },
  {
    "indent": 0,
    "raw": "Normal text",
    "tokens": [
      {
        "raw": "Normal text",
        "type": "text",
        "value": "Normal text",
      },
    ],
    "type": "paragraph",
    "value": "Normal text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '![alt text](image.png)' 1`] = `
[
  {
    "alt": "alt text",
    "indent": 0,
    "raw": "![alt text](image.png)",
    "type": "image",
    "url": "image.png",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '# Heading One Text' 1`] = `
[
  {
    "indent": 0,
    "level": 1,
    "raw": "# Heading One Text",
    "setext": false,
    "tokens": [
      {
        "raw": "Heading One Text",
        "type": "text",
        "value": "Heading One Text",
      },
    ],
    "type": "heading",
    "value": "Heading One Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '## Heading Two Text' 1`] = `
[
  {
    "indent": 0,
    "level": 2,
    "raw": "## Heading Two Text",
    "setext": false,
    "tokens": [
      {
        "raw": "Heading Two Text",
        "type": "text",
        "value": "Heading Two Text",
      },
    ],
    "type": "heading",
    "value": "Heading Two Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '### Heading Three Text' 1`] = `
[
  {
    "indent": 0,
    "level": 3,
    "raw": "### Heading Three Text",
    "setext": false,
    "tokens": [
      {
        "raw": "Heading Three Text",
        "type": "text",
        "value": "Heading Three Text",
      },
    ],
    "type": "heading",
    "value": "Heading Three Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '#### Heading Four Text' 1`] = `
[
  {
    "indent": 0,
    "level": 4,
    "raw": "#### Heading Four Text",
    "setext": false,
    "tokens": [
      {
        "raw": "Heading Four Text",
        "type": "text",
        "value": "Heading Four Text",
      },
    ],
    "type": "heading",
    "value": "Heading Four Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '##### Heading Five Text' 1`] = `
[
  {
    "indent": 0,
    "level": 5,
    "raw": "##### Heading Five Text",
    "setext": false,
    "tokens": [
      {
        "raw": "Heading Five Text",
        "type": "text",
        "value": "Heading Five Text",
      },
    ],
    "type": "heading",
    "value": "Heading Five Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '###### Heading Six Text' 1`] = `
[
  {
    "indent": 0,
    "level": 6,
    "raw": "###### Heading Six Text",
    "setext": false,
    "tokens": [
      {
        "raw": "Heading Six Text",
        "type": "text",
        "value": "Heading Six Text",
      },
    ],
    "type": "heading",
    "value": "Heading Six Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens: '<!-- comment item text -->' 1`] = `
[
  {
    "indent": 0,
    "raw": "<!-- comment item text -->",
    "type": "comment",
    "value": "comment item text",
  },
]
`;

exports[`lexer link variables should allow the link variables 1`] = `
[
  {
    "indent": 0,
    "raw": "If you want to search for something on the web, [google] is a nice place.",
    "tokens": [
      {
        "raw": "If you want to search for something on the web, ",
        "type": "text",
        "value": "If you want to search for something on the web, ",
      },
      {
        "raw": "[google]",
        "tokens": {
          "href": "https://www.google.com/",
          "title": {
            "raw": "google",
            "tokens": [
              {
                "raw": "google",
                "type": "text",
                "value": "google",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " is a nice place.",
        "type": "text",
        "value": " is a nice place.",
      },
    ],
    "type": "paragraph",
    "value": "If you want to search for something on the web, [google] is a nice place.",
  },
  {
    "type": "new-line",
  },
  {
    "indent": 0,
    "raw": "You can also use [google] to host some stuff and make a great app!",
    "tokens": [
      {
        "raw": "You can also use ",
        "type": "text",
        "value": "You can also use ",
      },
      {
        "raw": "[google]",
        "tokens": {
          "href": "https://www.google.com/",
          "title": {
            "raw": "google",
            "tokens": [
              {
                "raw": "google",
                "type": "text",
                "value": "google",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " to host some stuff and make a great app!",
        "type": "text",
        "value": " to host some stuff and make a great app!",
      },
    ],
    "type": "paragraph",
    "value": "You can also use [google] to host some stuff and make a great app!",
  },
]
`;
